--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Hero Section -->
     <section id="inicio" class="hero">
         <div class="hero-background">
-            <img src="WhatsApp Image 2026-02-21 at 15.53.02.jpeg" alt="Cristal Claro - Limpieza Profesional de Cristales">
+            <img src="WhatsApp Image 2026-02-27 at 20.04.38.jpeg" alt="Cristal Claro - Limpieza Profesional de Cristales en Las Palmas">
         </div>
         <div class="hero-overlay"></div>
         <div class="container">
@@ -99,6 +99,36 @@
                 </div>
             </div>
             <p class="services-footer">Servicio puntual, rápido y con resultados brillantes.</p>
+        </div>
+    </section>
+
+    <!-- Gallery Section -->
+    <section class="gallery">
+        <div class="container">
+            <h2 class="section-title">Nuestros Trabajos</h2>
+            <div class="gallery-grid">
+                <div class="gallery-item">
+                    <img src="WhatsApp Image 2026-02-27 at 17.37.01.jpeg" alt="Limpieza de cristales en vivienda - Cristal Claro">
+                </div>
+                <div class="gallery-item">
+                    <img src="WhatsApp Image 2026-02-21 at 16.22.26.jpeg" alt="Logotipo Cristal Claro - Limpieza de ventanas Las Palmas">
+                </div>
+                <div class="gallery-item">
+                    <img src="WhatsApp Image 2026-02-27 at 18.55.18.jpeg" alt="Equipo Cristal Claro limpiando escaparate - Las Palmas">
+                </div>
+                <div class="gallery-item">
+                    <img src="WhatsApp Image 2026-02-27 at 18.55.17.jpeg" alt="Trabajo de limpieza de escaparates en Las Palmas - Cristal Claro">
+                </div>
+                <div class="gallery-item">
+                    <img src="WhatsApp Image 2026-02-27 at 17.11.24.jpeg" alt="Limpieza profesional de cristales en cristalera - Cristal Claro">
+                </div>
+                <div class="gallery-item">
+                    <img src="WhatsApp Image 2026-02-27 at 19.35.16.jpeg" alt="Equipo profesional de limpieza de cristales - Cristal Claro">
+                </div>
+                <div class="gallery-item">
+                    <img src="WhatsApp Image 2026-02-27 at 19.37.28.jpeg" alt="Herramientas profesionales de limpieza - Cristal Claro">
+                </div>
+            </div>
         </div>
     </section>
 
@@ -360,6 +390,26 @@
                         <div>
                             <h4>Email</h4>
                             <p><a href="mailto:cristalclaro04@gmail.com">cristalclaro04@gmail.com</a></p>
+                        </div>
+                    </div>
+                    <div class="contact-item contact-social-item">
+                        <span class="contact-icon">📱</span>
+                        <div>
+                            <h4>Redes Sociales — Síguenos</h4>
+                            <div class="contact-social-links">
+                                <a href="https://www.tiktok.com/@cristal.claro" target="_blank" rel="noopener noreferrer" class="contact-social-link">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"/>
+                                    </svg>
+                                    TikTok
+                                </a>
+                                <a href="https://www.instagram.com/cristalclaro99" target="_blank" rel="noopener noreferrer" class="contact-social-link">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                                    </svg>
+                                    Instagram
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
