Service cards: images for all four services, hero button text and width, gallery updates
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p class="hero-text">Servicio rápido y económico para viviendas, locales y oficinas.</p>
                 <div class="hero-buttons">
                     <a href="#contacto" class="btn-primary">
-                        Solicitar Presupuesto Gratis
+                        Solicitar Presupuesto
                     </a>
                     <a href="#book-online" class="btn-secondary" onclick="event.preventDefault(); openBookingModal();">
                         Reservar Online
@@ -78,21 +78,33 @@
             <h2 class="section-title">Nuestros Servicios</h2>
             <div class="services-grid">
                 <div class="service-card">
+                    <div class="service-card-image">
+                        <img src="WhatsApp Image 2026-02-27 at 18.55.17.jpeg" alt="Limpieza de cristales en viviendas - Cristal Claro">
+                    </div>
                     <div class="service-icon">🏠</div>
                     <h3>Limpieza de Cristales en Viviendas</h3>
                     <p>Limpieza profesional de cristales en viviendas y apartamentos. Resultados impecables para su hogar.</p>
                 </div>
                 <div class="service-card">
+                    <div class="service-card-image">
+                        <img src="WhatsApp Image 2026-02-27 at 17.37.01.jpeg" alt="Ventanas de balcones y puertas - Cristal Claro">
+                    </div>
                     <div class="service-icon">🪟</div>
                     <h3>Ventanas de Balcones y Puertas</h3>
                     <p>Limpieza completa de ventanas, balcones y puertas. Dejamos sus cristales brillantes y transparentes.</p>
                 </div>
                 <div class="service-card">
+                    <div class="service-card-image">
+                        <img src="WhatsApp Image 2026-02-27 at 18.55.18.jpeg" alt="Escaparates de tiendas y negocios - Cristal Claro">
+                    </div>
                     <div class="service-icon">🏪</div>
                     <h3>Escaparates de Tiendas y Negocios</h3>
                     <p>Servicio especializado para escaparates de tiendas y negocios. Imagen profesional garantizada.</p>
                 </div>
                 <div class="service-card">
+                    <div class="service-card-image">
+                        <img src="WhatsApp Image 2026-02-27 at 20.04.38.jpeg" alt="Oficinas, bares y restaurantes - Cristal Claro">
+                    </div>
                     <div class="service-icon">🏢</div>
                     <h3>Oficinas, Bares y Restaurantes</h3>
                     <p>Limpieza profesional para oficinas, bares y restaurantes. Ambiente limpio y acogedor.</p>
@@ -108,19 +120,7 @@
             <h2 class="section-title">Nuestros Trabajos</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="WhatsApp Image 2026-02-27 at 17.37.01.jpeg" alt="Limpieza de cristales en vivienda - Cristal Claro">
-                </div>
-                <div class="gallery-item">
                     <img src="WhatsApp Image 2026-02-21 at 16.22.26.jpeg" alt="Logotipo Cristal Claro - Limpieza de ventanas Las Palmas">
-                </div>
-                <div class="gallery-item">
-                    <img src="WhatsApp Image 2026-02-27 at 18.55.18.jpeg" alt="Equipo Cristal Claro limpiando escaparate - Las Palmas">
-                </div>
-                <div class="gallery-item">
-                    <img src="WhatsApp Image 2026-02-27 at 18.55.17.jpeg" alt="Trabajo de limpieza de escaparates en Las Palmas - Cristal Claro">
-                </div>
-                <div class="gallery-item">
-                    <img src="WhatsApp Image 2026-02-27 at 17.11.24.jpeg" alt="Limpieza profesional de cristales en cristalera - Cristal Claro">
                 </div>
                 <div class="gallery-item">
                     <img src="WhatsApp Image 2026-02-27 at 19.35.16.jpeg" alt="Equipo profesional de limpieza de cristales - Cristal Claro">
