--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
@@ -505,6 +505,11 @@
         </div>
     </div>
 
+    <!-- Back to top -->
+    <button type="button" class="back-to-top" aria-label="Volver arriba" title="Volver arriba">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 15l-6-6-6 6"/></svg>
+    </button>
+
     <!-- Floating WhatsApp Button -->
     <a href="https://wa.me/34665696451" class="floating-whatsapp" target="_blank" rel="noopener noreferrer" aria-label="Contactar por WhatsApp">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -536,7 +541,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Cristal Claro. Todos los derechos reservados.</p>
+                <p>&copy; 2026 Cristal Claro. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
